New Frontend angular 6

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Zendesk Channel Server</title>
+  <meta charset="utf-8">
+  <title>Zendesk Channel Server</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--<link rel="icon" type="image/x-icon" href="favicon.ico">-->
 </head>
 <body>
-<h1>You can't be here..</h1>
-</body>
+  <app-root></app-root>
+<script type="text/javascript" src="build/runtime.js"></script><script type="text/javascript" src="build/polyfills.js"></script><script type="text/javascript" src="build/styles.js"></script><script type="text/javascript" src="build/vendor.js"></script><script type="text/javascript" src="build/main.js"></script></body>
 </html>
