--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <devx-root></devx-root>
+  <app-root></app-root>
 </body>
 </html>
