--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -51,6 +51,13 @@
                             ng-model="vm.selected_page">
                     </select>
                 </div>
+
+                <div class="form-group" ng-if="vm.expires">
+                    <div class="alert alert-warning">
+                        This Facebook Authentication will expire in {{vm.expires}} days. After saving this integration please refresh this facebook authentication until this message disappears in order to get a long term Facebook Authentication Access.
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div ng-if="!!vm.error" class="alert alert-danger">
                         {{vm.error}}
