- front end validation added. - fix update account to avoid the is already registered message - fix verification flow

--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -17,20 +17,25 @@
                     <label for="name">Integration Name:</label>
                     <input type="text" id="name" name="name" class="form-control" ng-model="vm.name"
                            ng-disabled="vm.processing" ng-required="true">
+                    <div class="alert alert-danger"
+                         ng-if="vm.form.name.$invalid && vm.form.name.$touched || vm.form.$submitted && vm.form.name.$invalid">
+                        The integration name field is required.
+                    </div>
                 </div>
-                <div class="form-group">
-                    <div ng-if="vm.timeout" class="alert alert-danger">
+                <div class="form-group" ng-if="vm.timeout">
+                    <div class="alert alert-danger">
                         Facebook authentication timeout was reached. Please, Try again.
                     </div>
                 </div>
-                <div class="form-group">
-                    <div ng-if="vm.facebook_canceled" class="alert alert-danger">
+                <div class="form-group" ng-if="vm.facebook_canceled">
+                    <div class="alert alert-danger">
                         The Facebook user does not approve the authentication, in order to connect with Instagram you
                         must to accept the required permissions.
                     </div>
                 </div>
             </form>
-            <a class="btn btn-block btn-social btn-facebook center" style="max-width: 220px" ng-disabled="vm.form.name.$error.required"
+            <a class="btn btn-block btn-social btn-facebook center" style="max-width: 220px"
+               ng-disabled="vm.form.name.$error.required"
                target="_blank" ng-click="vm.waitLogin($event)"
                ng-href="https://www.facebook.com/v3.0/dialog/oauth?client_id={{vm.client_ID}}&redirect_uri={{vm.return_URL}}&state={{vm.account_id}}&scope=manage_pages,pages_show_list,instagram_basic,instagram_manage_comments,business_management">
                 <span class="fa fa-facebook"></span>Connect with Facebook
@@ -41,7 +46,9 @@
             <form id="form_setup" name="vm.form">
                 <div class="form-group" ng-if="vm.expires">
                     <div class="alert alert-warning">
-                        This Facebook Authentication will expire in {{vm.expires}} days. After saving this integration please refresh this facebook authentication until this message disappears in order to get a long term Facebook Authentication Access.
+                        This Facebook Authentication will expire in {{vm.expires}} days. After saving this integration
+                        please refresh this facebook authentication until this message disappears in order to get a long
+                        term Facebook Authentication Access.
                     </div>
                 </div>
 
@@ -58,16 +65,21 @@
                 </div>
                 <div class="form-group">
                     <label for="page_id">Select the facebook page with a valid instagram account:</label>
-                    <select class="form-control" name="page_id" id="page_id"
+                    <select class="form-control" name="page_id" id="page_id" ng-required="true"
                             ng-options="page.name for page in vm.pages track by page.id"
                             ng-model="vm.selected_page">
                     </select>
+                    <div class="alert alert-danger"
+                         ng-if="vm.form.page_id.$invalid && vm.form.page_id.$touched || vm.form.$submitted && vm.form.page_id.$invalid">
+                        The facebook page field is required.
+                    </div>
                 </div>
                 <hr/>
                 <div class="form-group">
                     <h4>Optional Settings</h4>
                     <p>Choose the optional ticket field values, all the values are optionals.
-                        Please consider that all your new telegram tickets will be created with the optional settings you choose.</p>
+                        Please consider that all your new telegram tickets will be created with the optional settings
+                        you choose.</p>
                 </div>
 
                 <div class="row">
@@ -76,6 +88,7 @@
                             <label>Ticket Type:</label>
                             <select class="form-control" name="ticket_type" id="ticket_type"
                                     ng-model="vm.selected_ticket_type">
+                                <option value="">-</option>
                                 <option ng-repeat="type in vm.ticket_types" ng-value="type.id">{{type.name}}</option>
                             </select>
                         </div>
@@ -85,7 +98,10 @@
                             <label>Ticket Priority:</label>
                             <select class="form-control" name="ticket_priority" id="ticket_priority"
                                     ng-model="vm.selected_ticket_priority">
-                                <option ng-repeat="priority in vm.ticket_priorities" ng-value="priority.id">{{priority.name}}</option>
+                                <option value="">-</option>
+                                <option ng-repeat="priority in vm.ticket_priorities" ng-value="priority.id">
+                                    {{priority.name}}
+                                </option>
                             </select>
                         </div>
                     </div>
