--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -78,7 +78,7 @@
                 <div class="form-group">
                     <h4>Optional Settings</h4>
                     <p>Choose the optional ticket field values, all the values are optionals.
-                        Please consider that all your new telegram tickets will be created with the optional settings
+                        Please consider that all your new instagram tickets will be created with the optional settings
                         you choose.</p>
                 </div>
 
@@ -122,7 +122,18 @@
                     <label>How many post do you want to receive? <br><span class="text-muted">The same amount of comments per post will be
                         added.</span></label>
                     <select class="form-control" name="old_post_number" id="old_post_number" ng-required="true"
-                            ng-model="vm.old_post_number" ng-options="n for n in [] | range:1:51">
+                            ng-model="vm.old_post_number">
+                        <option>-</option>
+                        <option value="5">5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                        <option value="20">20</option>
+                        <option value="25">25</option>
+                        <option value="30">30</option>
+                        <option value="35">35</option>
+                        <option value="40">40</option>
+                        <option value="45">45</option>
+                        <option value="50">50</option>
                     </select>
                     <div class="alert alert-danger"
                          ng-if="vm.form.old_post_number.$invalid && vm.form.old_post_number.$touched || vm.form.$submitted && vm.form.old_post_number.$invalid">
