--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -67,7 +67,7 @@
                     <label for="page_id">Select the facebook page with a valid instagram account:</label>
                     <select class="form-control" name="page_id" id="page_id" ng-required="true"
                             ng-options="page.name for page in vm.pages track by page.id"
-                            ng-model="vm.selected_page">
+                            ng-model="vm.selected_page" ng-disabled="vm.isASavedIntegration">
                     </select>
                     <div class="alert alert-danger"
                          ng-if="vm.form.page_id.$invalid && vm.form.page_id.$touched || vm.form.$submitted && vm.form.page_id.$invalid">
@@ -113,31 +113,32 @@
                     <div class="text-muted">Please separate tags with spaces.</div>
                 </div>
 
-                <div class="form-group">
-                    <label>Receive Old Post?</label>
-                    <input type="checkbox" ng-model="vm.receiveOldPost">
-                </div>
-
-                <div class="form-group" ng-if="vm.receiveOldPost">
-                    <label>How many post do you want to receive? <br><span class="text-muted">The same amount of comments per post will be
+                <div ng-if="!vm.isASavedIntegration">
+                    <div class="form-group">
+                        <label>Receive Old Post?</label>
+                        <input type="checkbox" ng-model="vm.receiveOldPost">
+                    </div>
+                    <div class="form-group" ng-if="vm.receiveOldPost">
+                        <label>How many post do you want to receive? <br><span class="text-muted">The same amount of comments per post will be
                         added.</span></label>
-                    <select class="form-control" name="old_post_number" id="old_post_number" ng-required="true"
-                            ng-model="vm.old_post_number">
-                        <option>-</option>
-                        <option value="5">5</option>
-                        <option value="10">10</option>
-                        <option value="15">15</option>
-                        <option value="20">20</option>
-                        <option value="25">25</option>
-                        <option value="30">30</option>
-                        <option value="35">35</option>
-                        <option value="40">40</option>
-                        <option value="45">45</option>
-                        <option value="50">50</option>
-                    </select>
-                    <div class="alert alert-danger"
-                         ng-if="vm.form.old_post_number.$invalid && vm.form.old_post_number.$touched || vm.form.$submitted && vm.form.old_post_number.$invalid">
-                        Please, select the amount of posts you want to receive.
+                        <select class="form-control" name="old_post_number" id="old_post_number" ng-required="true"
+                                ng-model="vm.old_post_number" ng-init="vm.old_post_number = '1'">
+                            <option value="1">1</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                            <option value="20">20</option>
+                            <option value="25">25</option>
+                            <option value="30">30</option>
+                            <option value="35">35</option>
+                            <option value="40">40</option>
+                            <option value="45">45</option>
+                            <option value="50">50</option>
+                        </select>
+                        <div class="alert alert-danger"
+                             ng-if="vm.form.old_post_number.$invalid && vm.form.old_post_number.$touched || vm.form.$submitted && vm.form.old_post_number.$invalid">
+                            Please, select the amount of posts you want to receive.
+                        </div>
                     </div>
                 </div>
 
