--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -6,7 +6,7 @@
         <p ng-if="!vm.metadata">Welcome, please authenticate first with your Facebook Account in order to start working
             with Instagram Channel service.</p>
 
-        <p ng-if="!!vm.metadata">Welcome back. In order to update your order authentication please use the
+        <p ng-if="!!vm.metadata">Welcome back. In order to update your authentication please use the
             following button to log in with your Facebook Account.</p>
 
         <div id="spinner" class="loader center" ng-if="vm.processing"></div>
