--- a/public/modules/linkedin/admin_ui/admin_ui.html
+++ b/public/modules/linkedin/admin_ui/admin_ui.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default center" style="max-width: 800px">
     <div class="panel-heading">
-        <h3 class="panel-title">LinkedIn configuration</h3>
+        <h3 class="panel-title">LinkedIn Configuration</h3>
     </div>
     <div class="panel-body">
         <p ng-if="!vm.metadata">Welcome, please authenticate first with your LinkedIn Account in order to start working
@@ -17,6 +17,10 @@
                     <label for="name">Integration Name:</label>
                     <input type="text" id="name" name="name" class="form-control" ng-model="vm.name"
                            ng-disabled="vm.processing" ng-required="true">
+                    <div class="alert alert-danger"
+                         ng-if="vm.form.name.$invalid && vm.form.name.$touched || vm.form.$submitted && vm.form.name.$invalid">
+                        The integration name field is required.
+                    </div>
                 </div>
                 <div class="form-group">
                     <div ng-if="vm.timeout" class="alert alert-danger">
@@ -25,7 +29,7 @@
                 </div>
                 <div class="form-group">
                     <div ng-if="vm.linkedin_canceled" class="alert alert-danger">
-                        The Linked In user does not approve the authentication, in order to connect with Linked In you
+                        The LinkedIn user does not approve the authentication, in order to connect with LinkedIn you
                         must to accept the required permissions.
                     </div>
                     <div ng-if="vm.linkedIn_no_companies" class="alert alert-danger">
@@ -71,8 +75,12 @@
                     <label for="company_id">Select a LinkedIn Company page:</label>
                     <select class="form-control" name="company_id" id="company_id" ng-required="true"
                             ng-options="company.name for company in vm.company track by company.id"
-                            ng-model="vm.selected_company" ng-disabled="vm.isASavedIntegration">
+                            ng-model="vm.selected_company" ng-if="!vm.isASavedIntegration" >
                     </select>
+                     <div ng-if="vm.isASavedIntegration">
+                         <input type="text" id="company_page_selected" name="company_page_selected" class="form-control" ng-model="vm.company_page_selected"
+                                ng-disabled="vm.isASavedIntegration">
+                     </div>
                     <div class="alert alert-danger"
                          ng-if="vm.form.page_id.$invalid && vm.form.page_id.$touched || vm.form.$submitted && vm.form.page_id.$invalid">
                         A Linked Page is required.
@@ -82,7 +90,7 @@
                 <div class="form-group">
                     <h4>Optional Settings</h4>
                     <p>Choose optional ticket values, all the fields are optional. Please consider that all your new
-                        LinkedIn tickets will be created with the optional setting you choose.</p>
+                        LinkedIn tickets will be created with the optional settings you choose.</p>
                 </div>
 
                 <div class="row">
