--- a/public/modules/telegram/admin_ui/admin_ui.html
+++ b/public/modules/telegram/admin_ui/admin_ui.html
@@ -28,7 +28,7 @@
                 <div class="form-group">
                     <label for="name">Integration Name:</label>
                     <input type="text" id="name" name="name" class="form-control" ng-model="vm.name" ng-required="true"
-                           ng-disabled="!!vm.metadata">
+                           ng-disabled="!!vm.metadata" ng-readonly="!!vm.metadata">
                     <div class="alert alert-danger"
                          ng-if="vm.form.name.$invalid && vm.form.name.$touched || vm.form.$submitted && vm.form.name.$invalid">
                         Integration Name is required.
@@ -38,7 +38,7 @@
                 <div class="form-group">
                     <label for="token">Telegram Token:</label>
                     <input type="text" id="token" name="token" class="form-control" ng-model="vm.token"
-                           ng-required="true">
+                           ng-required="true" ng-disabled="!!vm.metadata" ng-readonly="!!vm.metadata">
                     <div class="alert alert-danger"
                          ng-if="vm.form.token.$invalid && vm.form.token.$touched || vm.form.$submitted && vm.form.token.$invalid">
                         Integration Token is required.
@@ -47,7 +47,7 @@
 
                 <div class="form-group">
                     <div class="checkbox">
-                        <label><input id="has_hello_message" type="checkbox" ng-init="vm.settings.has_hello_message = false"
+                        <label><input id="has_hello_message" type="checkbox"
                                       ng-model="vm.settings.has_hello_message">Enable Hello Message?</label>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
 
                 <div class="form-group">
                     <div class="checkbox">
-                        <label><input id="required_user_info" type="checkbox" ng-init="vm.settings.required_user_info = false"
+                        <label><input id="required_user_info" type="checkbox"
                                       ng-model="vm.settings.required_user_info">Ask basic information?</label>
                     </div>
                 </div>
