--- a/public/modules/telegram/admin_ui/admin_ui.html
+++ b/public/modules/telegram/admin_ui/admin_ui.html
@@ -71,6 +71,16 @@
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label><input id="tickets_by_group" type="checkbox"
+                                      ng-model="vm.settings.tickets_by_group">Ticket by Group?</label>
+                    </div>
+                    <div class="text-muted">If this option is enabled, all the messages on a chat group will be added to
+                        the same ticket.
+                    </div>
+                </div>
+
                 <hr/>
                 <div>
                     <div class="form-group">
