--- a/public/modules/instagram/admin_ui/admin_ui.html
+++ b/public/modules/instagram/admin_ui/admin_ui.html
@@ -83,7 +83,7 @@
                 <div class="form-group">
                     <h4>Optional Settings</h4>
                     <p>Choose optional ticket values, all the fields are optional. Please consider that all your new
-                        Instagram tickets will be created with the optional setting you choose.</p>
+                        Instagram tickets will be created with the optional settings you choose.</p>
                 </div>
 
                 <div class="row">
