--- a/public/modules/telegram/admin_ui/admin_ui.html
+++ b/public/modules/telegram/admin_ui/admin_ui.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default center" style="max-width: 800px">
     <div class="panel-heading">
-        <h3 class="panel-title">Instagram Channel Configuration</h3>
+        <h3 class="panel-title">Telegram Channel Configuration</h3>
     </div>
     <div class="panel-body">
         <p ng-if="!vm.metadata">We need you to provide us your Telegram token which was generated with the "Telegram Bot
@@ -76,7 +76,7 @@
                         <label><input id="tickets_by_group" type="checkbox"
                                       ng-model="vm.settings.tickets_by_group">Ticket by Group?</label>
                     </div>
-                    <div class="text-muted">If this option is enabled, all the messages on a chat group will be added to
+                    <div class="text-muted">If this option is selected, all the messages on a chat group will be added to
                         the same ticket.
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                     <div class="form-group">
                         <h4>Optional Settings</h4>
                         <p>Choose optional ticket values, all the fields are optional. Please consider that all your new
-                            Instagram tickets will be created with the optional setting you choose.</p>
+                            Telegram tickets will be created with the optional settings you choose.</p>
                     </div>
 
                     <div class="row">
